build6.txt
In file included from src/physics/GJK.h:7,
                 from src/physics/GJK.cpp:1:
src/physics/Collider3D.h: In function 'engine::physics::ContactInfo engine::physics::gjkEpaContact(const ShapeA&, const ShapeB&)':
src/physics/Collider3D.h:274:5: error: 'GJKResult' was not declared in this scope; did you mean 'result'? [-Wtemplate-body]
  274 |     GJKResult gjk = GJK::intersect(a, b);
      |     ^~~~~~~~~
      |     result
src/physics/Collider3D.h:275:10: error: 'gjk' was not declared in this scope [-Wtemplate-body]
  275 |     if (!gjk.isIntersecting) return result;
      |          ^~~
src/physics/Collider3D.h:276:5: error: 'EPAResult' was not declared in this scope; did you mean 'result'? [-Wtemplate-body]
  276 |     EPAResult epa = GJK::solveEPA(a, b, gjk);
      |     ^~~~~~~~~
      |     result
src/physics/Collider3D.h:277:10: error: 'epa' was not declared in this scope [-Wtemplate-body]
  277 |     if (!epa.success) return result;
      |          ^~~
src/physics/Collider3D.h:279:21: error: 'epa' was not declared in this scope [-Wtemplate-body]
  279 |     result.normal = epa.normal;
      |                     ^~~
